Changed rating to rankings

--- a/app/imports/ui/pages/about.html
+++ b/app/imports/ui/pages/about.html
@@ -11,7 +11,7 @@
             About
           </a>
           <a class="item" href="{{pathFor 'Rankings_Page'}}">
-            Rating
+            Rankings
           </a>
           <a class="item" href="{{pathFor 'User_Profile_Page'}}">
             Profile
