--- a/app/imports/ui/pages/rankings-page.html
+++ b/app/imports/ui/pages/rankings-page.html
@@ -33,11 +33,13 @@
           </tr>
           </thead>
           <tbody>
+          {{#each username in ratingsList}}
           <tr>
             <td>1</td>
             <td>{{ user }}</td>
-            <td>0</td>
+            <td>{{ username.rating }}</td>
           </tr>
+          {{/each}}
           </tbody>
         </table>
       </div>
