--- a/app/imports/ui/pages/user-home-page.html
+++ b/app/imports/ui/pages/user-home-page.html
@@ -10,6 +10,9 @@
           <a class="item" href="{{pathFor 'about'}}">
             About
           </a>
+          <a class="item" href="{{pathFor 'rating'}}">
+            Ratings
+          </a>
           <a class="item" href="{{pathFor 'Rankings_Page'}}">
             Rankings
           </a>
