added ratings to help page

--- a/app/imports/ui/pages/help-page.html
+++ b/app/imports/ui/pages/help-page.html
@@ -18,6 +18,8 @@
         <h2>Rankings</h2>
         <h5>Here you can view the rankings of all the senseis. Strive to be the top sensei! Rankings are
           based on ratings received by grasshoppers when they receive help.</h5>
+        <h2>Ratings</h2>
+        <h5>Here you can rate your sensei's.</h5>
       </div>
     </div>
   {{else}}
